syntax = "proto3";

package tensorflow;

option cc_enable_arenas = true;
option java_outer_classname = "TypesProtos";
option java_multiple_files = true;
option java_package = "org.tensorflow.framework";
option go_package = "github.com/tensorflow/tensorflow/tensorflow/go/core/framework/types_go_proto";

enum DataType {
  DT_INVALID = 0;
  DT_FLOAT = 1;
  DT_DOUBLE = 2;
  DT_INT32 = 3;
  DT_UINT8 = 4;
  DT_INT16 = 5;
  DT_INT8 = 6;
  DT_STRING = 7;
  DT_COMPLEX64 = 8;
  DT_INT64 = 9;
  DT_BOOL = 10;
  DT_QINT8 = 11;
  DT_QUINT8 = 12;
  DT_QINT32 = 13;
  DT_BFLOAT16 = 14;
  DT_QINT16 = 15;
  DT_QUINT16 = 16;
  DT_UINT16 = 17;
  DT_COMPLEX128 = 18;
  DT_HALF = 19;
  DT_RESOURCE = 20;
  DT_VARIANT = 21;
  DT_UINT32 = 22;
  DT_UINT64 = 23;
}
