syntax = "proto3";

package tensorflow.serving;

import "google/protobuf/wrappers.proto";

option cc_enable_arenas = true;
option java_outer_classname = "ModelProtos";
option java_multiple_files = true;
option java_package = "org.tensorflow.serving";
option go_package = "github.com/tensorflow/serving/tensorflow_serving/apis/model_go_proto";

message ModelSpec {
  string name = 1;
  oneof version_choice {
    google.protobuf.Int64Value version = 2;
    string version_label = 4;
  }
  string signature_name = 3;
}
